Added public timeline to pages. Lists all posts on site (max 20 at a time)

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -9,7 +9,9 @@
 	"internalError":"There was an internal error.",
 	"userCount":"Currently have %i users with %p posts.",
 	"postBtn":"Post!",
-	"timeline":"Timeline",
+	"timeline":"Friend Timeline",
+	"publicTimeline":"Public Timeline",
+	"publicDashLink":"Public",
 	"commentBtn":"Comment!",
 	"viewFullBtn":"View Full",
 	"likeBtn":"Like",
