typo in en lang again :P

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -44,7 +44,7 @@
 	"col2icon":"fa-file-code",
 	"col3icon":"fa-hdd",
 	"col1desc":"Join the community today to become part of a community of like-minded people!",
-	"col2desc":"Fork us on <a href\"https://github.com/mitchellurgero/tinysocial\">GitHub</a> and run your own TinySocial!",
+	"col2desc":"Fork us on <a href=\"https://github.com/mitchellurgero/tinysocial\">GitHub</a> and run your own TinySocial!",
 	"col3desc":"Using the <a href=\"https://github.com/mitchellurgero/jsondatabase\">JSONDatabase class</a>, this PHP script doesn't need any database server.",
 	"newAccountLink":"Need an account?",
 	"pleaseSignIn":"Please Sign In",
