--- a/app/lang/fr.json
+++ b/app/lang/fr.json
@@ -57,5 +57,14 @@
 	"generalError":"Il y a une erreur inconnu. Veuillez contacter l'administrateur syst&egrave;me.",
 	"passwordChanged":"Votre mot de passe a bien &eacute;t&eacute; chang&eacute;!",
 	"profilePicChanged": "Votre photo de profile a bien &eacute;t&eacute; chang&eacute;!",
-	"commentNonExist":"Vous ne pouvez pas commenter un message qui n'existe pas!"
+	"commentNonExist":"Vous ne pouvez pas commenter un message qui n'existe pas!",
+	"captchaTxt":"Captcha",
+	"invalidCaptcha":"La vérification Captcha a échoué, veuillez recommencer",
+	"regRequireTitle":"Règles d'inscription",
+	"regUsername":"L'identifiant doit avoir entre 4 et 24 caractères",
+	"regName":"Le nom doit avoir au minimum 4 caractères. Veuillez utiliser un alias si besoin.",
+	"regEmail":"Le mail n'a <i>pas</i> besoin d'être valide, mais vous devriez en utiliser un vrai pour récupérer votre mot de passe si nécessaire.",
+	"regPassword":"Le mot de passe doit comporter au moins 8 caractères et inclure au moins un caractère spécial. <code>!@#$%^&*()</code>",
+	"badUsername":"Cet identifiant est invalide",
+	"badPassword":"Veuillez vérifier que votre mot de passe respecte les règles."
 }
