comments now have UID\'s as well as linkable anchors.

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -68,6 +68,7 @@
 	"badUsername":"That username is invalid.",
 	"badPassword":"Please check that your password matches the rules.",
 	"likeError":"You cannot like the same post more than once!",
-	"likeSuccess":"You liked this post!"
+	"likeSuccess":"You liked this post!",
+	"anchorTxt":"Direct Link"
 	
 }
