--- a/app/lang/fr.json
+++ b/app/lang/fr.json
@@ -66,5 +66,8 @@
 	"regEmail":"Le mail n'a <i>pas</i> besoin d'&ecirc;tre valide, mais vous devriez en utiliser un vrai pour r&eacute;cup&eacute;rer votre mot de passe si n&eacute;cessaire.",
 	"regPassword":"Le mot de passe doit comporter au moins 8 caractères et inclure au moins un caract&egrave;re sp&eacute;cial. <code>!@#$%^&*()</code>",
 	"badUsername":"Cet identifiant est invalide",
-	"badPassword":"Veuillez v&eacute;rifier que votre mot de passe respecte les r&egrave;gles."
+	"badPassword":"Veuillez v&eacute;rifier que votre mot de passe respecte les r&egrave;gles.",
+	"likeError":"Vous ne pouvez pas liker plusieurs fois le m&ecirc;me message!",
+	"likeSuccess":"Vous avez lik&eacute; ce message!",
+	"anchorTxt":"Lien direct"
 }
