--- a/app/lang/fr.json
+++ b/app/lang/fr.json
@@ -1,5 +1,5 @@
 {
-	"loginBtn":"Connection",
+	"loginBtn":"Connexion",
 	"registerBtn":"Inscription",
 	"dashboardLink":"Tableau de bord",
 	"settingsLink":"Configurations",
@@ -14,8 +14,8 @@
 	"publicTimeline":"Fil de discussion publique",
 	"publicDashLink":"Publique",
 	"commentBtn":"Commenter!",
-	"viewFullBtn":"Voire en entier",
-	"likeBtn":"Liker",
+	"viewFullBtn":"Voir en entier",
+	"likeBtn":"J'aime",
 	"postBy":"Post&eacute; par %u &agrave; %d",
 	"commentBy":"Comment&eacute; par %u &agrave; %d",
 	"noComments":"Pas de commentaire sur ce message actuellement!",
@@ -36,7 +36,7 @@
 	"nameTxt":"Nom complet",
 	"passwordTxt":"Mot de passe",
 	"passwordTxt2":"Mot de passe (Encore)",
-	"registerFor":"S'inscrire &agrave;",
+	"registerFor":"S'inscrire à",
 	"newAccountLink":"Besoin d'un compte?",
 	"pleaseSignIn":"Veuillez vous connecter",
 	"followSomeone":"Vous devrez suivre quelqu'un!",
@@ -59,7 +59,7 @@
 	"badUsername":"Cet identifiant est invalide",
 	"badPassword":"Veuillez v&eacute;rifier que votre mot de passe respecte les r&egrave;gles.",
 	"likeError":"Vous ne pouvez pas liker plusieurs fois le m&ecirc;me message!",
-	"likeSuccess":"Vous avez lik&eacute; ce message!",
+	"likeSuccess":"Vous aimez ce message!",
 	"anchorTxt":"Lien direct",
 	"followSignup":"Inscrivez-vous aujourd'hui pour s'abonner à ",
 	"userNonExist":"Cet utilisateur n'existe pas sur ce serveur."
